--- a/public/admin-assets/css/style.css
+++ b/public/admin-assets/css/style.css
@@ -471,3 +471,8 @@ body.noscroll:before{ content:''; position:fixed; top:0; left:0; bottom:0; right
     background-color: #3a4651;
     color: #fff;
 }
+hr{
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
